# conversational-ai-practice

./: .gitignore  README.md
agentic-coding-with-chelsea-troy/: .gitignore  cpu_tasks.py  settings.local.json  settings.template.json.md  slash.commands.md
agentic-coding-with-chelsea-troy/.claude/: settings.json
agentic-coding-with-chelsea-troy/ai-coding-tools/: README.md
agentic-coding-with-chelsea-troy/ctroy_code_analysis-0.1.1/: CONTRIBUTING.md  PKG-INFO  README.md  pyproject.toml
agentic-coding-with-chelsea-troy/ctroy_code_analysis-0.1.1/ai-coding-tools/context/: 2026-02-10-request-interrupted-by-user-for-tool.md
agentic-coding-with-chelsea-troy/ctroy_code_analysis-0.1.1/src/ctroy_code_analysis/: server.py
devsnap/: .mcp.json  CLAUDE.md  README.md  docker-compose.yaml  next.config.ts  package-lock.json  package.json  vitest.config.mts
devsnap/.playwright-mcp/: page-2026-05-02T09-20-47-163Z.yml  page-2026-05-02T09-21-20-711Z.yml  page-2026-05-02T09-21-40-056Z.yml  page-2026-05-02T09-22-09-076Z.yml  page-2026-05-03T09-18-39-702Z.yml  page-2026-05-03T09-18-58-435Z.yml  page-2026-05-03T09-19-25-886Z.yml  page-2026-05-03T09-19-55-783Z.yml  (+8 more)
devsnap/src/: auth.ts  (+2 more)
hookhub/: .dockerignore  .mcp.json  CLAUDE.md  Dockerfile  README.md  docker-compose.yaml  package-lock.json  package.json
mastering-claude-ai-book/: CLAUDE.md  chap4.md  chap5.md  chap6.md  chap7.md
test-project/: config.py  joke.py
weather_mcp/: pyproject.toml  server.py
weather_mcp_nodejs/: README.md  index.js  package-lock.json  package.json
weather_mcp_python/: README.md  pyproject.toml
(+201 files in other folders)
