[project]
name = "weather_mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=3.3.1",
    "mcp[cli]>=1.27.1",
]

[project.scripts]
weather-mcp = "weather_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["weather_mcp"]
