[project]
name = "ctroy-code-analysis"
version = "0.1.1"
description = "MCP server exposing code review tools: comment review, name review, cohesion review, performance review, test coverage enforcement, and gridmat diagrams."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]",
]

[project.scripts]
ctroy-code-analysis = "ctroy_code_analysis.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ctroy_code_analysis"]
